--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -1,18 +1,14 @@
+
 html,body{
 	height: 100%;
+	width: 98%;
 }
-
-
-
-
 #areaDeTrabajo{
 	width: 75%;
 	height: 100%;
 	float: left;
 	border: 2px solid;
 	margin-left: 1%;
-
-
 }
 
 h1,h2,h3 {
@@ -23,78 +19,67 @@ h1,h2,h3 {
 
 
 
-body{
-	width: 98%;
-	/*height: 500px;	*/
+
+#menu {  text-align: center;
+font-size: 0.85em;
+width: 16%;
+float: left;
+position: relative;
+padding-top: 10px;
+left: -9px;
+margin-bottom: -10px;
 }
 
 
+#menu ul { list-style-type: none;border: 0;
+}
+#menu ul li.nivel1 {
+width: 100%;
+}
+#menu ul li.primera {
+ border-top: solid 1px #FFF;
 
+}
+#menu ul li a {
+display: block;
+text-decoration: none;
+color: #fff;
+background-color: #399;
+border: solid 1px #fff;
+border-top: none;
+padding: 8%;
+position: relative;
+}
+#menu ul li:hover {
+position: relative;
+background-color: #6CC;
+color: #000;
 
-@import url(http://fonts.googleapis.com/css?family=Oxygen+Mono);
-/* Please Keep this font import at the very top of any CSS file */
-@charset "UTF-8";
-/* Starter CSS for Flyout Menu */
-#cssmenu {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  line-height: 1;
 }
-#cssmenu ul,
-#cssmenu ul li,
-#cssmenu ul ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-#cssmenu ul {
-  position: relative;
-  z-index: 597;
-  float: left;
-}
-#cssmenu ul li {
-  float: left;
-  min-height: 1px;
-  line-height: 1em;
-  vertical-align: middle;
-  position: relative;
-}
-#cssmenu ul li.hover,
-#cssmenu ul li:hover {
-  position: relative;
-  z-index: 599;
-  cursor: default;
-}
-#cssmenu ul ul {
-  visibility: hidden;
-  position: absolute;
-  top: 100%;
-  left: 0px;
-  z-index: 598;
-  width: 100%;
-}
-#cssmenu ul ul li {
-  float: none;
-}
-#cssmenu ul ul ul {
-  top: -2px;
-  right: 0;
-}
-#cssmenu ul li:hover > ul {
-  visibility: visible;
-}
-#cssmenu ul ul {
-  top: 1px;
-  left: 99%;
-}
-#cssmenu ul li {
-  float: none;
-}
-#cssmenu ul ul {
-  margin-top: 1px;
-}
-#cssmenu ul ul li {
-  font-weight: normal;
-}
+#menu ul li a:hover, #menu ul li:hover a.nivel1 {
+background-color: #6CC;
+color: #000;
+position: relative;
 
+}
+#menu ul li a.nivel1 {display: block!important;display: none;
+position: relative;
+}
+#menu ul li ul {display: none;
+}
+#menu ul li a:hover ul, #menu ul li:hover ul {display: block;
+position: absolute;left: 161px;top:-1px!important;top: -31px;
+}
+#menu ul li ul li a {width: 150px;
+background-color: #6CC;
+color: #000;
+}
+#menu ul li ul li a:hover {position: relative;
+background-color: #399;
+color: #FFF;
+}
+table.falsa {border-collapse:collapse;
+border:0px;
+float: left;
+position: relative;
+}
