--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -17,7 +17,11 @@ h1,h2,h3 {
 	font-family: sans-serif;
 }
 
+#menu1{
+  width: 100%;
+  height: 80%;
 
+}
 
 
 #menu {  text-align: center;
@@ -68,7 +72,10 @@ position: relative;
 #menu ul li ul {display: none;
 }
 #menu ul li a:hover ul, #menu ul li:hover ul {display: block;
-position: absolute;left: 161px;top:-1px!important;top: -31px;
+position: absolute;
+left: 79%;
+top:-1px!important;
+top: -31px;
 }
 #menu ul li ul li a {width: 150px;
 background-color: #6CC;
