--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -20,6 +20,8 @@ h1,h2,h3 {
 #menu1{
   width: 100%;
   height: 80%;
+  margin-top: 2%;
+
 
 }
 
@@ -32,6 +34,7 @@ position: relative;
 padding-top: 10px;
 left: -9px;
 margin-bottom: -10px;
+margin-left: 3%; 
 }
 
 
@@ -48,7 +51,7 @@ width: 100%;
 display: block;
 text-decoration: none;
 color: #fff;
-background-color: #399;
+background-color: #E0B513;
 border: solid 1px #fff;
 border-top: none;
 padding: 8%;
@@ -56,12 +59,12 @@ position: relative;
 }
 #menu ul li:hover {
 position: relative;
-background-color: #6CC;
+background-color: #deae3d;
 color: #000;
 
 }
 #menu ul li a:hover, #menu ul li:hover a.nivel1 {
-background-color: #6CC;
+background-color: #deae3d;
 color: #000;
 position: relative;
 
@@ -71,22 +74,59 @@ position: relative;
 }
 #menu ul li ul {display: none;
 }
-#menu ul li a:hover ul, #menu ul li:hover ul {display: block;
+#menu ul li a:hover ul, #menu ul li:hover ul {
+display: block;
 position: absolute;
 left: 79%;
 top:-1px!important;
 top: -31px;
 }
-#menu ul li ul li a {width: 150px;
-background-color: #6CC;
+#menu ul li ul li a {
+width: 150px;
+background-color: #E0B513;
 color: #000;
 }
-#menu ul li ul li a:hover {position: relative;
-background-color: #399;
+#menu ul li ul li a:hover {
+position: relative;
+background-color: #deae3d;
 color: #FFF;
 }
 table.falsa {border-collapse:collapse;
 border:0px;
 float: left;
 position: relative;
+}
+#navegacion{
+  background: #E1B715 url(barra-amarilla.png) repeat-x 0px 50%;
+  border-bottom: 1px solid #8C700B;
+  width: 90%;
+  height: 16px;
+  float: left;
+ 
+ 
+  position: relative;
+  margin-left: 5.5%;
+}
+
+#inicio{
+
+float: left;
+text-decoration: none;
+font: normal normal normal 12px/normal Verdana, 'DejaVu Sans', 'Bitstream Vera Sans', sans-serif;
+ margin-top: 2px;
+ margin-left: 13px;
+}
+
+#salir{
+float: right;
+
+ text-decoration: none;
+ font: normal normal normal 12px/normal Verdana, 'DejaVu Sans', 'Bitstream Vera Sans', sans-serif;
+  margin-top: 2px;
+    margin-right: 37px;
+}
+#saludo{
+ margin-left: 68%;
+   margin-top: 2px;
+   font: normal normal normal 12px/normal Verdana, 'DejaVu Sans', 'Bitstream Vera Sans', sans-serif;
 }
