--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -34,7 +34,7 @@ position: relative;
 padding-top: 10px;
 left: -9px;
 margin-bottom: -10px;
-margin-left: 3%; 
+margin-left: 3%;
 }
 
 
@@ -102,8 +102,8 @@ position: relative;
   width: 90%;
   height: 16px;
   float: left;
- 
- 
+
+
   position: relative;
   margin-left: 5.5%;
 }
@@ -126,7 +126,7 @@ float: right;
     margin-right: 37px;
 }
 #saludo{
- margin-left: 68%;
+ margin-left: 720px;
    margin-top: 2px;
    font: normal normal normal 12px/normal Verdana, 'DejaVu Sans', 'Bitstream Vera Sans', sans-serif;
 }
