--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -130,3 +130,60 @@ float: right;
    margin-top: 2px;
    font: normal normal normal 12px/normal Verdana, 'DejaVu Sans', 'Bitstream Vera Sans', sans-serif;
 }
+
+
+
+	#form1{
+		margin:1em 0;
+		padding-top:10px;
+		background:url(../img/form_top.gif) no-repeat 0 0;
+		width: 100%;
+  		height: 227px;
+		}
+	#form1 fieldset{
+		margin:0;
+		padding:0;
+		border:none;
+		float:left;
+		
+		width:100%;
+		margin-left:25px;
+		}
+	s
+	#form1 p{
+		margin:.5em 0;
+	}
+	
+	#form1 input, #form1 textarea{
+		width:100px;
+		border:1px solid #ddd;
+		background:#fff url(../img/form_input.gif) no-repeat 0 100% ;/*repeat-x;*/
+		padding:3px;
+
+		}
+	#form1 textarea{
+		height:125px;
+		overflow:auto;
+		}
+	#form1 p.submit{
+		clear:both;
+		background:url(../img/form_bottom.gif) no-repeat 0 100%;
+		width: 261px;
+  		margin-left: -25px;
+		padding:0 25px 20px 25px;
+		
+		text-align:right;
+
+		}
+	#form1 button{
+		width:150px;
+		height:37px;
+		line-height:37px;
+		border:none;
+		background:url(../img/form_button.gif) no-repeat 0 0;
+		color:#fff;
+		cursor:pointer;
+		text-align:center;
+		  margin-right: 54%;
+		}
+
