--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -136,7 +136,7 @@ float: right;
 	#form1{
 		margin:1em 0;
 		padding-top:10px;
-		
+
 		width: 100%;
   		height: 227px;
 		}
@@ -144,27 +144,27 @@ float: right;
 	#form1 fieldset {
 		background-color: #F3F5F4;
 
-	}	
-	
+	}
+
 	#form1 p{
 		margin:.5em 0;
 	}
-	
+
 	#form1 input{
 		width:190px;
 		border:1px solid #ddd;
-		
+
 		padding:3px;
 
 		}
-	
+
 	#form1 p.submit{
 		clear:both;
-		
+
 		width: 261px;
   		margin-left: -25px;
 		padding:0 25px 20px 25px;
-		
+
 		text-align:right;
 
 		}
@@ -173,10 +173,19 @@ float: right;
 		height:37px;
 		line-height:37px;
 		border:none;
-		
+
 		color:#fff;
 		cursor:pointer;
 		text-align:center;
 		  margin-right: 54%;
 		}
 
+#chiquito{
+  width: 50px;
+
+}
+
+#mediano{
+  width: 100px;
+
+}
