--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -97,7 +97,7 @@ float: left;
 position: relative;
 }
 #navegacion{
-  background: #E1B715 url(barra-amarilla.png) repeat-x 0px 50%;
+  background: #E1B715 url(../img/barra-amarilla.png) repeat-x 0px 50%;
   border-bottom: 1px solid #8C700B;
   width: 90%;
   height: 16px;
@@ -198,14 +198,12 @@ body {
 	background: #fff; border: 1px solid #555; box-shadow: 0 0 3px #aaa; padding-right: 70px;
 }
 /* === HTML5 validation styles === */
-.contact_form input:required, .contact_form textarea:required {
-	background: #fff url(images/red_asterisk.png) no-repeat 98% center;
-}
+
 .contact_form input:required:valid, .contact_form textarea:required:valid {
-	background: #fff url(images/valid.png) no-repeat 98% center; box-shadow: 0 0 5px #5cd053; border-color: #28921f;
+	background: #fff url(../img/valid.png) no-repeat 98% center; box-shadow: 0 0 5px #5cd053; border-color: #28921f;
 }
 .contact_form input:focus:invalid, .contact_form textarea:focus:invalid {
-	background: #fff url(images/invalid.png) no-repeat 98% center; box-shadow: 0 0 5px #d45252; border-color: #b03535;
+	background: #fff url(../img/invalid.png) no-repeat 98% center; box-shadow: 0 0 5px #d45252; border-color: #b03535;
 }
 
 /* === Form hints === */
