--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -185,6 +185,33 @@ body {
 .contact_form input {
 	height: 20px; width: 166px; padding: 5px 8px;
 }
+
+
+.contact_form select {
+
+	height: 30px;
+	 width: 166px;
+
+
+	 background: #eee url(../img/arrow.png);
+	  background-size: 26px 31px;
+  	background-position: 136px center;
+	 background-repeat: no-repeat;
+
+   	border-radius: 3px;
+   	-webkit-appearance: none;
+   	-webkit-transition: all 0.4s;
+   	-moz-transition: all 0.4s;
+   	transition: all 0.4s;
+   	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+}
+
+select:hover{
+	background-color: #ddd;
+}
+
+
+
 .contact_form textarea {
 	padding: 8px; width: 300px;
 }
@@ -200,7 +227,7 @@ body {
 }
 /* === HTML5 validation styles === */
 
-.contact_form input:required:valid, .contact_form textarea:required:valid {
+.contact_form input:required:valid, .contact_form textarea:required:valid  {
 	background: #fff url(../img/valid.png) no-repeat 98% center; box-shadow: 0 0 5px #5cd053; border-color: #28921f;
 }
 .contact_form input:focus:invalid, .contact_form textarea:focus:invalid {
