--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -175,7 +175,7 @@ body {
 }
 /* === Form Elements === */
 .contact_form label {
-	width: 150px;
+	width: 140px;
 	 margin-top: 3px;
 	 /*
 	 display: inline-block;
@@ -183,14 +183,14 @@ body {
 	   padding: 3px;
 }
 .contact_form input {
-	height: 20px; width: 166px; padding: 5px 8px;
+	height: 20px; width: 140px; padding: 5px 8px;
 }
 
 
 .contact_form select {
 
 	height: 30px;
-	 width: 166px;
+	 width: 140px;
 
 
 	 background: #eee url(../img/arrow.png);
@@ -206,12 +206,14 @@ body {
    	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.3);
 }
 
-select:hover{
+.contact_form select:hover{
 	background-color: #ddd;
 }
 
-
-
+.contact_form  input[type="time"] {
+	height:20px;
+	 width: 80px;
+}
 .contact_form textarea {
 	padding: 8px; width: 300px;
 }
@@ -220,7 +222,14 @@ select:hover{
 }
 /* form element visual styles */
 .contact_form input, .contact_form textarea {
-	border: 1px solid #aaa; box-shadow: 0px 0px 3px #ccc, 0 10px 15px #eee inset; border-radius: 2px; padding-right: 30px; -moz-transition: padding .25s; -webkit-transition: padding .25s; -o-transition: padding .25s; transition: padding .25s;
+	border: 1px solid #aaa;
+	box-shadow: 0px 0px 3px #ccc, 0 10px 15px #eee inset;
+	border-radius: 2px;
+	 padding-right: 30px;
+	-moz-transition: padding .25s;
+	-webkit-transition: padding .25s;
+	-o-transition: padding .25s;
+	transition: padding .25s;
 }
 .contact_form input:focus, .contact_form textarea:focus {
 	background: #fff; border: 1px solid #555; box-shadow: 0 0 3px #aaa; padding-right: 70px;
@@ -228,10 +237,14 @@ select:hover{
 /* === HTML5 validation styles === */
 
 .contact_form input:required:valid, .contact_form textarea:required:valid  {
-	background: #fff url(../img/valid.png) no-repeat 98% center; box-shadow: 0 0 5px #5cd053; border-color: #28921f;
+	background: #fff url(../img/valid.png) no-repeat 98% center;
+	box-shadow: 0 0 5px #5cd053;
+	border-color: #28921f;
 }
 .contact_form input:focus:invalid, .contact_form textarea:focus:invalid {
-	background: #fff url(../img/invalid.png) no-repeat 98% center; box-shadow: 0 0 5px #d45252; border-color: #b03535;
+	background: #fff url(../img/invalid.png) no-repeat 98% center;
+	box-shadow: 0 0 5px #d45252;
+	border-color: #b03535;
 }
 
 /* === Form hints === */
