--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 table.formTable {
 	width:382px;
 	height: 207px;
@@ -59,7 +60,7 @@ table.formTable {
 
 .catalog {
 	margin:0px;padding:0px;
-	width:900px;
+	width:100%;
 	box-shadow: 10px 10px 5px #888888;
 	border:1px solid #ffffff;
 
@@ -81,7 +82,7 @@ table.formTable {
 }.catalog table{
     border-collapse: collapse;
         border-spacing: 0;
-	width:900px;
+	width:100%;
 	height:100%;
 	margin:0px;padding:0px;
 }.catalog tr:last-child td:last-child {
@@ -158,3 +159,33 @@ table.formTable {
 	height: 20px;
 }
 
+
+
+table {
+  width: 100%;
+  background: white;
+  line-height: 1em;
+  display: table;
+  /* Fondo intercalado */
+}
+table tr:nth-of-type(odd) {
+  background: #ededed;
+}
+table td,
+table th {
+  padding: 6px;
+  border: 1px solid #cfcfcf;
+  text-align: left;
+}
+table th {
+  background: #333333;
+  color: white;
+  font-weight: bold;
+}
+
+
+
+/* Botón para ocular/ mostrar la tabla */
+button {
+  margin: 1em 0;
+}
